# taskmanager

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  booking_agent.py  voice_agent.py
backend/app/api/: chat.py  llm_planner.py  telegram.py
backend/app/api/call/: incoming.py  outgoing.py
backend/app/clients/: LLM_server_client.py  tavily_client.py
backend/app/clients/phone_clients/: twilio_client.py
backend/app/core/: agents_instructions.py  config.py
backend/app/db/: engine.py  models.py
backend/app/db/repositories/: outbound_call_repository.py
backend/app/schemas/: chat.py
backend/app/services/: task_splitter.py  telegram.py
backend/app/tools/: __init__.py  list_contacts.py  make_phone_call.py  tools_descriptions.py  tools_registry.py  update_calendar.py  web_search.py
backend/tests/: websocket  websocket.py
