[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv",
    "fastapi>=0.136.1",
    "google-api-python-client",
    "google-auth",
    "mistralai>=2.4.3",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tavily>=1.1.0",
    "twilio>=9.10.5",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
